# falsec

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  config.schema.json  config_schema.json  sample-config.json5
.github/: copilot.yml
.github/workflows/: ci.yml  release.yml
completion/: falsec.bash  falsec.elv  falsec.fish  falsec.ps1  falsec.zsh
examples/: .gitignore  add.f  bad_pop.f  config.yml  hello_world.f  simple.f
falsec/: Cargo.toml
falsec-analyzer/: Cargo.toml
falsec-analyzer/src/: error.rs  lib.rs
falsec-cli/: Cargo.toml
falsec-cli/src/: lib.rs  main.rs
falsec-compiler/: Cargo.toml
falsec-compiler/src/: error.rs  lib.rs  linux_x86_64_elf.rs  nasm.rs
falsec-compiler/src/linux_x86_64_elf/: asm.rs  boilerplate.rs
falsec-interpreter/: Cargo.toml
falsec-interpreter/src/: error.rs  lib.rs
falsec-parser/: Cargo.toml
falsec-parser/src/: error.rs  lib.rs
falsec-test/: Cargo.toml
falsec-test/tests/: integration.rs
falsec-test/tests/samples/: a.f
falsec-types/: Cargo.toml
falsec-types/src/: lib.rs  source.rs
falsec-util/: Cargo.toml
falsec-util/src/: lib.rs
falsec/src/: lib.rs  main.rs
scripts/: generate_completions.py  generate_config_schema.py
