[workspace]
resolver = "2"
members = [
    "falsec-analyzer",
    "falsec-cli",
    "falsec-compiler",
    "falsec-interpreter",
    "falsec-parser", "falsec-test",
    "falsec-types",
    "falsec-util",
    "falsec-test"
]

[workspace.package]
repository = "https://github.com/MixusMinimax/falsec"
homepage = "https://github.com/MixusMinimax/falsec"
license = "MIT"
rust-version = "1.85.0"
edition = "2024"
