[workspace]
resolver = "2"
members = [
    "falsec",
    "falsec-analyzer",
    "falsec-compiler",
    "falsec-interpreter",
    "falsec-parser", "falsec-test",
    "falsec-test",
    "falsec-types",
    "falsec-util"
]

[workspace.package]
repository = "https://github.com/MixusMinimax/falsec"
homepage = "https://github.com/MixusMinimax/falsec"
license = "MIT"
rust-version = "1.87.0"
edition = "2024"
