[package]
name = "falsec-analyzer"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors = ["Maxi <maxi.barmetler@gmail.com>"]
readme = "../README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "code analyzer for falsec (WIP)."

[dependencies]
falsec-types = { version = "0.1.1", path = "../falsec-types" }
falsec-util = { version = "0.1.1", path = "../falsec-util" }
