[package]
name = "falsec-compiler"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors = ["Maxi <maxi.barmetler@gmail.com>"]
readme = "../README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FALSE compiler."

[dependencies]
falsec-types = { version = "0.1.1", path = "../falsec-types" }
falsec-util = { version = "0.1.1", path = "../falsec-util" }
tempfile = "3.15.0"
