[package]
name = "falsec-interpreter"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
authors = ["Maxi <maxi.barmetler@gmail.com>"]
readme = "../README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FALSE interpreter."

[dependencies]
falsec-types = { version = "0.1.1", path = "../falsec-types" }
