[package]
name = "falsec-types"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "generate-json-schema"
path = "src/bin/generate_json_schema.rs"
required-features = ["schema"]

[dependencies.schemars]
version = "1.2.0"
optional = true
features = ["derive"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.clap]
version = "4.5"
optional = true
features = ["derive"]

[features]
default = []
serde = ["dep:serde"]
schema = ["serde", "dep:serde_json", "dep:schemars", "dep:clap"]
full = ["serde"]
